ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: qualification
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: qualif.192.168.53.103.nip.io
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 5000
      - path: /quotes
        pathType: Prefix
        backend:
          service:
            name: quotes-service
            port:
              number: 5000
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: search-service
            port:
              number: 5000
